style(pwa): altera cor do tema para preto
A cor do tema foi alterada de #244B55 para #000000 no arquivo manifest.json, proporcionando uma aparência mais neutra e consistente para o Progressive Web App.

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#F0F4F7",
-  "theme_color": "#244B55",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "assets/icons/icon-192x192.png",
